[gd_scene load_steps=6 format=3 uid="uid://xpvvjpw5kk0s"]

[ext_resource type="Script" uid="uid://c8cvuoi42ii5m" path="res://scenes/game objects/loot_drop.gd" id="1_0dmu7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0dmu7"]
height = 2.65771
radius = 0.854492

[sub_resource type="Animation" id="Animation_yqgwq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshPreview:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_emh7x"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshPreview:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.614868, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lix83"]
_data = {
&"RESET": SubResource("Animation_yqgwq"),
&"idle": SubResource("Animation_emh7x")
}

[node name="LootDrop" type="Node3D"]
script = ExtResource("1_0dmu7")

[node name="MeshPreview" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="PickupArea3D" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.328857, 0)
shape = SubResource("CylinderShape3D_0dmu7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lix83")
}
autoplay = "idle"

[node name="Label3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36138, 0)
billboard = 1
text = "LOOT DROP HERE"

[node name="LootRefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
